--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -1,5 +1,4 @@
 name: SonarCloud Analysis
-
 on:
   push:
     branches: [ main, master ]
@@ -9,33 +8,23 @@ on:
 jobs:
   sonarcloud:
     runs-on: ubuntu-latest
-    
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
       with:
         fetch-depth: 0
-        
-    - name: Set up JDK
-      uses: actions/setup-java@v3
+
+    - name: Setup Python
+      uses: actions/setup-python@v4
       with:
-        java-version: '17'
-        distribution: 'temurin'
-        
-    - name: Cache SonarCloud packages
-      uses: actions/cache@v3
-      with:
-        path: ~/.sonar/cache
-        key: ${{ runner.os }}-sonar
-        restore-keys: ${{ runner.os }}-sonar
-        
-    - name: Cache Maven packages
-      uses: actions/cache@v3
-      with:
-        path: ~/.m2
-        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-        restore-keys: ${{ runner.os }}-m2
-        
-    - name: Run SonarCloud Analysis
+        python-version: '3.x'
+
+    - name: SonarCloud Scan
+      uses: SonarSource/sonarcloud-github-action@master
       env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=your-project-key
+      with:
+        args: >
+          -Dsonar.projectKey=WhiteA77_python-project-83
+          -Dsonar.organization=whitea77
+          -Dsonar.sources=.
