--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -9,28 +9,36 @@ jobs:
   sonarcloud:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-    - name: Setup Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.x'
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
 
-    - name: Run tests with coverage
-      run: |
-        pip install pytest pytest-cov
-        pytest --cov=page_analyzer --cov-report xml
+      - name: Install deps
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt || true
+          pip install pytest pytest-cov
 
-    - name: SonarCloud Scan
-      uses: SonarSource/sonarcloud-github-action@master
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      with:
-        args: >
-          -Dsonar.projectKey=WhiteA77_python-project-83
-          -Dsonar.organization=whitea77
-          -Dsonar.sources=.
-          -Dsonar.python.coverage.reportPaths=coverage.xml
+      - name: Run tests with coverage
+        run: |
+          pytest --cov=page_analyzer --cov-report xml:coverage.xml
+
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN:  ${{ secrets.SONAR_TOKEN }}
+        with:
+          args: >
+            -Dsonar.projectKey=WhiteA77_python-project-83
+            -Dsonar.organization=whitea77
+            -Dsonar.sources=page_analyzer
+            -Dsonar.tests=tests
+            -Dsonar.test.inclusions=tests/**/*.py,**/test_*.py,**/*_test.py
+            -Dsonar.python.coverage.reportPaths=coverage.xml
+            -Dsonar.coverage.exclusions=**/migrations/**,**/__init__.py
